syntax = "proto3";
package proto;
option go_package = ".;proto";

import "google/protobuf/empty.proto";
import "session.proto";

service Clipboard {
    // get the contents of the clipboard
    rpc ClipboardRead (ClipboardReadRequest) returns (ClipboardReadResponse);

    // get the contents of the clipboard every time they change
    rpc ClipboardReadStream (ClipboardReadStreamRequest) returns (stream ClipboardReadStreamResponse);

    // write to the clipboard
    rpc ClipboardWrite (ClipboardWriteRequest) returns (google.protobuf.Empty);
}

message ClipboardReadRequest {
    Session session = 1;
}

message ClipboardReadResponse {
    string text = 1;
}

message ClipboardReadStreamRequest {
    Session session = 1;
    bool IncludeOliveHelpTraffic = 2;
}

message ClipboardReadStreamResponse {
    string text = 2;
    string error = 15;
}

message ClipboardWriteRequest {
    Session session = 1;
    string text = 2;
}